--- a/src/style.css
+++ b/src/style.css
@@ -78,15 +78,14 @@ header {
   grid-area: "list";
 }
 
-.todo {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+.listView {
   max-width: 700px;
 }
 
-.checkComplete {
-  margin-right: 10px;
+.todo {
+  display: grid;
+  grid-template-columns: 20px 1fr 100px 50px;
+  align-items: center;
 }
 
 .todo span {
