--- a/src/style.css
+++ b/src/style.css
@@ -89,13 +89,8 @@ header {
 
 .todo {
   display: grid;
-  grid-template-columns: 20px 1fr 100px 50px;
+  grid-template-columns: 20px 1fr 100px 20px 20px;
   align-items: center;
-}
-
-.todo span {
-  margin-right: 0;
-  margin-left: auto;
 }
 
 .deleteBtn {
