style .listTitle, .listBtn

--- a/src/style.css
+++ b/src/style.css
@@ -83,6 +83,14 @@ header {
   grid-area: "list";
 }
 
+.listTitle {
+  display: inline-block;
+}
+
+.listBtn {
+  padding: 5px 15px;
+}
+
 .listView {
   max-width: 700px;
 }
