--- a/src/style.css
+++ b/src/style.css
@@ -104,12 +104,10 @@ header {
 
 .todo {
   display: grid;
-  grid-template-columns: 20px 1fr 100px 20px 20px;
+  grid-template-columns: 20px 1fr 100px 30px 30px;
   align-items: center;
-}
-
-.deleteBtn {
-  margin-left: 10px;
+  margin-bottom: 5px;
+  font-size: 1.1rem;
 }
 
 .edits {
