--- a/src/style.css
+++ b/src/style.css
@@ -35,8 +35,6 @@ header {
   opacity: .2;
 }
 
-
-
 .sidebar {
   padding: 30px 20px;
   grid-area: "sidebar";
@@ -108,6 +106,14 @@ header {
   align-items: center;
   margin-bottom: 5px;
   font-size: 1.1rem;
+}
+
+.editBtn {
+  color: rgba(0, 0, 0, 0.2);
+}
+
+.deleteBtn {
+  color: rgba(255, 0, 0, 0.7);
 }
 
 .edits {
