--- a/src/style.css
+++ b/src/style.css
@@ -47,7 +47,7 @@ header {
 }
 
 .sidebar {
-  padding: 30px 20px;
+  padding: 30px 30px 30px 0;
   grid-area: "sidebar";
   font-size: 1.5rem;
   font-weight: 600;
@@ -55,6 +55,7 @@ header {
 
 .sidebar li {
   margin-top: 10px;
+  padding: 0 20px;
 }
 
 .projects {
@@ -70,7 +71,6 @@ header {
 
 .projectItem {
   display: flex;
-  margin-left: 20px;
   font-size: 1.3rem;
   font-weight: 400;
 }
@@ -79,11 +79,9 @@ header {
   margin-right: 10px;
 }
 
-.projectItem div {
-  margin-right: 0;
-  margin-left: auto;
+.projectItem p {
+  padding-right: 20px;
 }
-
 
 #notes {
   margin-top: 50px;
