--- a/src/style.css
+++ b/src/style.css
@@ -22,7 +22,7 @@ main {
 }
 
 header {
-  grid-area: "header";
+  grid-area: header;
 }
 
 .selected {
@@ -52,7 +52,7 @@ header {
 
 .sidebar {
   padding: 30px 30px 30px 0;
-  grid-area: "sidebar";
+  grid-area: sidebar;
   font-size: 1.5rem;
   font-weight: 600;
 }
@@ -98,13 +98,14 @@ header {
 }
 
 .list {
-  grid-area: "list";
+  grid-area: list;
+  padding: 0 30px;
 }
 
 .topRow {
   display: flex;
   align-items: center;
-  max-width: 515px;
+  width: 515px;
   margin-bottom: 15px;
 }
 
@@ -117,7 +118,7 @@ header {
 }
 
 .listView {
-  max-width: 600px;
+  width: 600px;
 }
 
 .todo {
