--- a/src/style.css
+++ b/src/style.css
@@ -28,6 +28,10 @@ main {
 
 header {
   grid-area: header;
+  background-color: rgb(172, 211, 255);
+  display: flex;
+  align-items: center;
+  padding-left: 35px;
 }
 
 .selectable:hover {
