--- a/src/style.css
+++ b/src/style.css
@@ -12,6 +12,11 @@
 ul {
   list-style-type: none;
 }
+
+button {
+  padding: 5px 15px;
+}
+
 html, body{
   height: 100%;
 }
@@ -92,7 +97,6 @@ header {
 
 .projectsBtn {
   margin-left: 10px;
-  padding: 5px 15px;
 }
 
 .projectItem {
@@ -139,7 +143,6 @@ header {
 }
 
 .listBtn {
-  padding: 5px 15px;
   margin-left: 20px;
 }
 
