--- a/src/style.css
+++ b/src/style.css
@@ -17,6 +17,10 @@ button {
   padding: 5px 15px;
 }
 
+textarea {
+  resize: none;
+}
+
 html, body{
   height: 100%;
 }
@@ -236,9 +240,57 @@ header {
 #editDesc {
   height: 80px;
   width: 100%;
-  resize: none;
 }
 
 #editAccept {
   margin-left: auto;
+}
+
+.newInputs {
+  margin-left: 30px;
+  padding: 10px;
+  width: min(500px, 100%);
+}
+
+.newName,
+.newDesc {
+  border: 1px solid grey;
+  border-radius: 3px;
+  padding: 5px;
+}
+
+.newName {
+  width: 100%;
+  font-size: 1rem;
+  margin-bottom: 10px;
+}
+
+.newDesc {
+  display: block;
+  width: 100%;
+  height: 100px;
+  font-size: 1rem;
+  margin-bottom: 10px;
+}
+
+.newDate {
+  padding: 3px;
+  font-size: .9rem;
+  display: flex;
+  align-items: center;
+}
+
+.newInputBottom {
+  display: flex;
+  align-items: center;
+}
+
+.confirmNew,
+.cancelNew {
+  font-size: .9rem;
+}
+
+.confirmNew {
+  margin-left: auto;
+  margin-right: 10px;
 }
