--- a/src/style.css
+++ b/src/style.css
@@ -104,18 +104,25 @@ header {
 }
 
 .projectItem {
-  display: flex;
-  font-size: 1.3rem;
+  display: grid;
+  grid-template-columns: 20px 130px 30px;
+  font-size: 1.2rem;
   font-weight: 400;
-}
-
-.projectItem span{
-  margin-right: 10px;
-  padding-left: 20px;
+  padding-left: 30px !important;
 }
 
 .projectItem p {
-  padding-right: 20px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.projectItem span {
+  font-size: .9rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: grey;
 }
 
 #notes {
