--- a/src/style.css
+++ b/src/style.css
@@ -105,7 +105,7 @@ header {
 
 .projectItem {
   display: grid;
-  grid-template-columns: 20px 130px 30px;
+  grid-template-columns: 22px 130px 30px;
   font-size: 1.2rem;
   font-weight: 400;
   padding-left: 30px !important;
@@ -117,12 +117,14 @@ header {
   text-overflow: ellipsis;
 }
 
-.projectItem span {
-  font-size: .9rem;
+.projectLength {
+  font-size: .8rem;
   display: flex;
   align-items: center;
   justify-content: center;
   color: grey;
+  background-color: rgb(255, 255, 255);
+  border-radius: 50%;
 }
 
 #notes {
