change spacing for .editTodo

--- a/src/style.css
+++ b/src/style.css
@@ -189,7 +189,7 @@ header {
 
 .todo {
   display: grid;
-  grid-template-columns: 20px 1fr 110px 60px 30px;
+  grid-template-columns: 20px 1fr 110px 25px 30px;
   align-items: center;
   font-size: 1.2rem;
   padding: 5px 10px;
@@ -209,14 +209,11 @@ header {
   font-size: 1rem;
 }
 
-.todoDate,
-.editTodo,
-.delTodo {
-  text-align: right;
-}
-
 .editTodo {
   color: rgba(0, 0, 0, 0.2);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .edits {
