--- a/src/style.css
+++ b/src/style.css
@@ -216,6 +216,11 @@ header {
   justify-content: center;
 }
 
+.editTodo:hover {
+  color: rgba(0, 0, 0, 0.5);
+  transition: color 0.5s ease;
+}
+
 .edits {
   height: 100vh;
   width: 100vw;
