--- a/src/style.css
+++ b/src/style.css
@@ -77,7 +77,8 @@ header {
 .selectable:hover,
 .todoName:hover,
 .editTodo:hover,
-.delTodo:hover {
+.delTodo:hover,
+input[type='checkbox'] {
   cursor: pointer;
 }
 
