--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,7 @@
 :root {
   --sidebar-padding: 0 20px;
+  --main-border-radius: 35px;
+  --header-color: rgb(136, 0, 255);
 }
 
 * {
@@ -21,6 +23,10 @@ textarea {
   resize: none;
 }
 
+html {
+  background-color: var(--header-color);
+}
+
 html, body{
   height: 100%;
 }
@@ -37,10 +43,11 @@ main {
 
 header {
   grid-area: header;
-  background-color: rgb(172, 211, 255);
+  background-color: var(--header-color);
   display: flex;
   align-items: center;
   padding-left: 35px;
+  color: white;
 }
 
 .selectable:hover {
@@ -89,6 +96,7 @@ input[type='checkbox'] {
   font-weight: 600;
   height: 100%;
   background-color: rgb(238, 246, 255);
+  border-top-left-radius: var(--main-border-radius);
 }
 
 .sidebar li {
@@ -163,21 +171,26 @@ input[type='checkbox'] {
 .list {
   grid-area: list;
   width: 100%;
+  height: 100%;
+  background-color: white;
   display: flex;
   flex-direction: column;
   align-items: center;
+  border-top-right-radius: var(--main-border-radius);
 }
 
 .topRow,
 .listView {
   width: max(500px, 100%);
+  background-color: white;
 }
 
 .topRow {
   display: flex;
   align-items: center;
-  margin-bottom: 15px;
+  padding-bottom: 15px;
   padding-top: 20px;
+  border-top-right-radius: var(--main-border-radius);
 }
 
 .listTitle {
