--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 :root {
-  --sidebar-padding: 0 20px;
+  --sidebar-padding: 0 35px;
   --main-border-radius: 35px;
   --header-color: rgb(136, 0, 255);
 }
@@ -17,6 +17,11 @@ ul {
 
 button {
   padding: 5px 15px;
+  border-radius: 5px;
+  border: none;
+  font-weight: 700;
+  color: white;
+  background-color: var(--header-color);
 }
 
 textarea {
@@ -50,6 +55,11 @@ header {
   color: white;
 }
 
+.selectable {
+  padding-top: 5px !important;
+  padding-bottom: 5px !important;
+}
+
 .selectable:hover {
   background-color: rgb(235, 235, 235);
   border-top-right-radius: 50px;
@@ -57,7 +67,7 @@ header {
 }
 
 .selected {
-  background-color: rgb(255, 255, 255);
+  background-color: rgb(205, 178, 255);
   border-top-right-radius: 50px;
   border-bottom-right-radius: 50px;
 }
@@ -81,6 +91,7 @@ header {
   opacity: .2;
 }
 
+button,
 .selectable:hover,
 .todoName:hover,
 .editTodo:hover,
@@ -92,10 +103,10 @@ input[type='checkbox'] {
 .sidebar {
   padding: 30px 30px 30px 0;
   grid-area: sidebar;
-  font-size: 1.5rem;
-  font-weight: 600;
+  font-size: 1.3rem;
+  font-weight: 500;
   height: 100%;
-  background-color: rgb(238, 246, 255);
+  background-color: white;
   border-top-left-radius: var(--main-border-radius);
 }
 
@@ -122,12 +133,14 @@ input[type='checkbox'] {
 .projectItem {
   display: grid;
   grid-template-columns: 22px 130px 30px;
-  font-size: 1.2rem;
-  font-weight: 400;
-  padding-left: 30px !important;
+  grid-template-rows: 22px;
+  font-size: 1rem;
+  font-weight: 300;
+  padding-left: var(--sidebar-padding);
 }
 
 .projectName {
+  align-self: center;
   padding: 0 5px;
   overflow: hidden;
   white-space: nowrap;
