--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,8 @@
 :root {
   --sidebar-padding: 0 35px;
   --main-border-radius: 35px;
-  --header-color: rgb(136, 0, 255);
+  --main-color: rgb(136, 0, 255);
+  --sub-color: rgb(242, 226, 255);
 }
 
 * {
@@ -21,7 +22,7 @@ button {
   border: none;
   font-weight: 700;
   color: white;
-  background-color: var(--header-color);
+  background-color: var(--main-color);
 }
 
 textarea {
@@ -29,7 +30,7 @@ textarea {
 }
 
 html {
-  background-color: var(--header-color);
+  background-color: var(--main-color);
 }
 
 html, body{
@@ -48,7 +49,7 @@ main {
 
 header {
   grid-area: header;
-  background-color: var(--header-color);
+  background-color: var(--main-color);
   display: flex;
   align-items: center;
   padding-left: 35px;
@@ -67,7 +68,7 @@ header {
 }
 
 .selected {
-  background-color: rgb(205, 178, 255);
+  background-color: var(--sub-color);
   border-top-right-radius: 50px;
   border-bottom-right-radius: 50px;
 }
@@ -182,6 +183,7 @@ input[type='checkbox'] {
 }
 
 .list {
+  padding: 0 20px;
   grid-area: list;
   width: 100%;
   height: 100%;
@@ -225,12 +227,18 @@ input[type='checkbox'] {
   grid-template-columns: 15px 1fr 110px 25px 30px;
   align-items: center;
   font-size: 1rem;
-  padding: 10px 10px;
+  padding: 10px 15px;
+  border-radius: 20px;
 }
 
-.todo:nth-child(even){
-  background-color: rgb(250, 250, 250);
+.todo:hover {
+  background-color: var(--sub-color);
+  transition: all 0.5s ease-out;
 }
+
+/* .todo:nth-child(even){
+  background-color: rgb(250, 250, 250);
+} */
 
 .todoName {
   padding-left: 10px;
@@ -244,7 +252,11 @@ input[type='checkbox'] {
 
 .todoDate {
   font-size: .8rem;
-  color: red;
+  color: var(--main-color);
+}
+
+.sortDate {
+  color: var(--main-color);
 }
 
 
