--- a/src/style.css
+++ b/src/style.css
@@ -65,12 +65,14 @@ header {
   background-color: rgb(235, 235, 235);
   border-top-right-radius: 50px;
   border-bottom-right-radius: 50px;
+  transition: all .2s ease-in-out;
 }
 
 .selected {
   background-color: var(--sub-color);
   border-top-right-radius: 50px;
   border-bottom-right-radius: 50px;
+  transition: background-color .2s ease-in;
 }
 
 .collapse{
