--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,8 @@
+@import "./components/sidebar.css";
+@import "./components/todoList.css";
+@import "./components/editTodo.css";
+@import "./components/notes.css";
+
 :root {
   --sidebar-padding: 0 35px;
   --main-border-radius: 35px;
@@ -105,382 +110,3 @@ input[type='checkbox'] {
   cursor: pointer;
 }
 
-.sidebar {
-  padding: 30px 30px 30px 0;
-  grid-area: sidebar;
-  font-size: 1.3rem;
-  font-weight: 500;
-  height: 100%;
-  background-color: white;
-  border-top-left-radius: var(--main-border-radius);
-}
-
-.sidebar li {
-  margin-top: 10px;
-  padding: var(--sidebar-padding);
-}
-
-#projectsList{
-  padding: 0;
-}
-
-.projects {
-  padding: var(--sidebar-padding);
-  display: flex;
-  margin-bottom: 10px;
-  align-items: center;
-}
-
-.projectsBtn {
-  margin-left: 10px;
-}
-
-.projectItem {
-  display: grid;
-  grid-template-columns: 22px 130px 30px;
-  grid-template-rows: 22px;
-  font-size: 1rem;
-  font-weight: 300;
-  padding-left: var(--sidebar-padding);
-}
-
-.projectName {
-  align-self: center;
-  padding: 8px 5px !important;
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-}
-
-.projectLength {
-  font-size: .8rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: var(--main-color);
-  background-color: rgb(245, 245, 245);
-  border-radius: 50%;
-}
-
-.delProject,
-.delTodo,
-.editTodo {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: rgb(0, 0, 0, .2);
-}
-
-.delProject:hover,
-.delTodo:hover {
-  color: red;
-  transition: color 0.5s ease;
-}
-
-.editTodo:hover {
-  color: rgba(0, 0, 0, 0.5);
-  transition: color 0.5s ease;
-}
-
-#notes {
-  margin-top: 50px;
-}
-
-.list {
-  padding: 0 20px;
-  grid-area: list;
-  width: 100%;
-  height: 100%;
-  background-color: white;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  border-top-right-radius: var(--main-border-radius);
-}
-
-.topRow,
-.listView {
-  width: max(500px, 100%);
-  background-color: white;
-}
-
-.topRow {
-  display: flex;
-  align-items: center;
-  padding-bottom: 15px;
-  padding-top: 20px;
-  border-top-right-radius: var(--main-border-radius);
-}
-
-.listTitle {
-  margin-left: 40px;
-}
-
-.listBtn {
-  margin-left: 20px;
-}
-
-.dueDate {
-  margin-left: auto;
-  margin-right: 95px;
-}
-
-
-.todo {
-  margin: 5px 0;
-  display: grid;
-  grid-template-columns: 15px 1fr 110px 25px 30px;
-  align-items: center;
-  font-size: 1rem;
-  padding: 0 15px;
-  border-radius: 20px;
-}
-
-.todo:hover {
-  background-color: var(--sub-color);
-  transition: all 0.5s ease-out;
-}
-
-/* .todo:nth-child(even){
-  background-color: rgb(250, 250, 250);
-} */
-
-.todoName {
-  padding: 10px 10px;
-}
-
-.todoDesc {
-  grid-column: 2 / span 4;
-  font-size: .8rem;
-  padding: 10px 20px 20px 20px;
-}
-
-.todoDate {
-  font-size: .8rem;
-  color: var(--main-color);
-}
-
-.sortDate {
-  color: var(--main-color);
-}
-
-
-.edits {
-  height: 100vh;
-  width: 100vw;
-  z-index: 10;
-  position: absolute;
-  top: 0;
-  left: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: rgba(180, 180, 180, 0.397);
-}
-
-.editInputs {
-  z-index: 20;
-  padding: 20px;
-  background-color: white;
-  border: 2px solid black;
-  border-radius: 5px;
-  height: 250px;
-  width: 500px;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  font-size: 1.1rem;
-}
-
-.editInputs button {
-  padding: 5px;
-  width: 80px;
-}
-
-#editName,
-#editDesc {
-  margin-bottom: 10px;
-  border: 1px solid black;
-  border-radius: 2px;
-  padding: 5px;
-  font-size: .8rem;
-}
-
-#editName {
-  width: 100%;
-}
-
-#editDesc {
-  height: 80px;
-  width: 100%;
-}
-
-#editAccept {
-  margin-left: auto;
-}
-
-.newInputs {
-  margin-left: 30px;
-  padding: 10px;
-  width: min(500px, 100%);
-}
-
-.newName,
-.newDesc {
-  border: 1px solid grey;
-  border-radius: 3px;
-  padding: 5px;
-}
-
-.newName {
-  width: 100%;
-  font-size: 1rem;
-  margin-bottom: 10px;
-}
-
-.newDesc {
-  display: block;
-  width: 100%;
-  height: 100px;
-  font-size: 1rem;
-  margin-bottom: 10px;
-}
-
-.newDate {
-  padding: 3px;
-  font-size: .9rem;
-  display: flex;
-  align-items: center;
-}
-
-.newInputBottom {
-  display: flex;
-  align-items: center;
-}
-
-.confirmNew,
-.cancelNew {
-  font-size: .9rem;
-}
-
-.confirmNew {
-  margin-left: auto;
-  margin-right: 10px;
-}
-
-
-/* Remove default checkbox styles */
-input[type="checkbox"] {
-  /* Add if not using autoprefixer */
-  -webkit-appearance: none;
-  appearance: none;
-  /* For iOS < 15 to remove gradient background */
-  background-color: #fff;
-  /* Not removed via appearance */
-  margin: 0;
-}
-
-input[type="checkbox"] {
-  appearance: none;
-  background-color: #fff;
-  margin: 0;
-  font: inherit;
-  color: grey;
-  width: .9rem;
-  height: .9rem;
-  border: 0.1rem solid grey;
-  border-radius: 0.15em;
-  transform: translateY(-0.075em);
-  display: grid;
-  place-content: center;
-}
-
-input[type="checkbox"]::before {
-  content: "";
-  width: 0.65rem;
-  height: 0.65rem;
-  transform: scale(0);
-  transition: 120ms transform ease-in-out;
-  /* Checked color */
-  box-shadow: inset 1em 1em rgb(228, 228, 228);
-}
-
-input[type="checkbox"]:checked::before {
-  transform: scale(1);
-}
-
-.newNote {
-  margin-left: 20px;
-}
-
-main[data-list='NotesSection'] .listView {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.noteItem {
-  width: 220px;
-  height: 240px;
-}
-
-.noteItem:nth-child(even) {
-  transform:rotate(4deg);
-  position:relative;
-  top:5px;
-}
-.noteItem:nth-child(3n) {
-  transform:rotate(-3deg);
-  position:relative;
-  top:-5px;
-}
-.noteItem:nth-child(5n) {
-  transform:rotate(5deg);
-  position:relative;
-  top:-10px;
-}
-
-.noteText {border: none;
-  padding: 20px;
-  height: 100%;
-  width: 100%;
-  font-size: 1.3rem;
-  font-weight: 400;
-  border: 1px solid #E8E8E8;
-  background: #ffff88;
-  /* Old browsers */
-  background: -moz-linear-gradient(-45deg, #ffff88 81%, #ffff88 82%, #ffff88 82%, #ffffc6 100%);
-  /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, right bottom, color-stop(81%, #ffff88), color-stop(82%, #ffff88), color-stop(82%, #ffff88), color-stop(100%, #ffffc6));
-  /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(-45deg, #ffff88 81%, #ffff88 82%, #ffff88 82%, #ffffc6 100%);
-  /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(-45deg, #ffff88 81%, #ffff88 82%, #ffff88 82%, #ffffc6 100%);
-  /* Opera 11.10+ */
-  background: -ms-linear-gradient(-45deg, #ffff88 81%, #ffff88 82%, #ffff88 82%, #ffffc6 100%);
-  /* IE10+ */
-  background: linear-gradient(135deg, #ffff88 81%, #ffff88 82%, #ffff88 82%, #ffffc6 100%);
-  /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffff88', endColorstr='#ffffc6', GradientType=1);
-  /* IE6-9 fallback on horizontal gradient */
-  border-bottom-right-radius: 60px 10px;
-}
-
-.noteText:focus {
-  outline: none !important;
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
-  transition: box-shadow .3s;
-}
-
-.deleteNote {
-  position: relative;
-  top: -238px;
-  right: -193px;
-  width: fit-content;
-  z-index: 10;
-  color: rgb(179, 179, 179);
-}
-
-.deleteNote:hover {
-  color: red;
-  transition: color .3s;
-}
