--- a/src/components/notes/notes.css
+++ b/src/components/notes/notes.css
@@ -2,7 +2,7 @@
   margin-left: 20px;
 }
 
-main[data-list='NotesSection'] .listView {
+main[data-list="NotesSection"] .listView {
   display: flex;
   flex-wrap: wrap;
 }
@@ -37,20 +37,46 @@ main[data-list='NotesSection'] .listView {
   width: 100%;
   font-size: 1.3rem;
   font-weight: 400;
-  border: 1px solid #E8E8E8;
+  border: 1px solid #e8e8e8;
   background: #ffff88;
   /* Old browsers */
-  background: -moz-linear-gradient(-45deg, #ffff88 81%, #ffff88 82%, #ffff88 82%, #ffffc6 100%);
+  background: -moz-linear-gradient(-45deg,
+      #ffff88 81%,
+      #ffff88 82%,
+      #ffff88 82%,
+      #ffffc6 100%);
   /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, right bottom, color-stop(81%, #ffff88), color-stop(82%, #ffff88), color-stop(82%, #ffff88), color-stop(100%, #ffffc6));
+  background: -webkit-gradient(linear,
+      left top,
+      right bottom,
+      color-stop(81%, #ffff88),
+      color-stop(82%, #ffff88),
+      color-stop(82%, #ffff88),
+      color-stop(100%, #ffffc6));
   /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(-45deg, #ffff88 81%, #ffff88 82%, #ffff88 82%, #ffffc6 100%);
+  background: -webkit-linear-gradient(-45deg,
+      #ffff88 81%,
+      #ffff88 82%,
+      #ffff88 82%,
+      #ffffc6 100%);
   /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(-45deg, #ffff88 81%, #ffff88 82%, #ffff88 82%, #ffffc6 100%);
+  background: -o-linear-gradient(-45deg,
+      #ffff88 81%,
+      #ffff88 82%,
+      #ffff88 82%,
+      #ffffc6 100%);
   /* Opera 11.10+ */
-  background: -ms-linear-gradient(-45deg, #ffff88 81%, #ffff88 82%, #ffff88 82%, #ffffc6 100%);
+  background: -ms-linear-gradient(-45deg,
+      #ffff88 81%,
+      #ffff88 82%,
+      #ffff88 82%,
+      #ffffc6 100%);
   /* IE10+ */
-  background: linear-gradient(135deg, #ffff88 81%, #ffff88 82%, #ffff88 82%, #ffffc6 100%);
+  background: linear-gradient(135deg,
+      #ffff88 81%,
+      #ffff88 82%,
+      #ffff88 82%,
+      #ffffc6 100%);
   /* W3C */
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffff88', endColorstr='#ffffc6', GradientType=1);
   /* IE6-9 fallback on horizontal gradient */
@@ -61,7 +87,7 @@ main[data-list='NotesSection'] .listView {
   outline: none !important;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
-  transition: box-shadow .3s;
+  transition: box-shadow 0.3s;
 }
 
 .deleteNote {
@@ -75,5 +101,5 @@ main[data-list='NotesSection'] .listView {
 
 .deleteNote:hover {
   color: red;
-  transition: color .3s;
+  transition: color 0.3s;
 }
