--- a/src/components/sidebar.css
+++ b/src/components/sidebar.css
@@ -50,7 +50,7 @@
 }
 
 .projectLength {
-  font-size: .8rem;
+  font-size: 0.8rem;
   display: flex;
   align-items: center;
   justify-content: center;
