--- a/src/components/sidebar.css
+++ b/src/components/sidebar.css
@@ -58,3 +58,9 @@
   background-color: rgb(245, 245, 245);
   border-radius: 50%;
 }
+
+.sidebar .confirmNew,
+.sidebar .cancelNew {
+  width: 100%;
+  margin-bottom: 5px;
+}
